# trendcrwaling

./: .coverage  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  STATUS.md  init.sh  login_error.html  main.py  pyproject.toml  pyrightconfig.json  session-handoff.md  setup_ig_session.py
.claude/: settings.json
.opencode/: opencode.json  tui.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
docs/: prd-facebook-scraper-live.md  prd-playwright-facebook-scraper.md  prd-playwright-instagram-scraper.md  prd-playwright-tiktok-scraper.md  prd-social-allthree-modes.md  prd-tiktok-alternatives.md  ralph-harness-audit.md
issues/: ISSUE-001-facebook-post-url-and-image.md  ISSUE-002-verify-mcp-returns-real-facebook-posts.md  ISSUE-003-fix-facebook-scraper-cookie-auth.md  ISSUE-004-playwright-facebook-scraper.md  ISSUE-005-verify-playwright-facebook-live.md  ISSUE-006-any-type-in-test-facebook.md  ISSUE-007-scrape-page-exceeds-30-line-limit.md  ISSUE-008-type-ignore-suppressions.md  ISSUE-009-facebookpost-missing-fields-in-test-server.md  ISSUE-010-add-black-and-pytest-cov-dev-deps.md  ISSUE-011-playwright-instagram-scraper.md  ISSUE-012-wire-instagram-playwright-to-mcp.md  ISSUE-013-close-browser-on-exception-path.md  ISSUE-014-type-annotate-module-constants.md  ISSUE-015-type-annotate-ctx-in-setup-browser.md  ISSUE-021-input-validation-at-mcp-boundary.md  ISSUE-038-tiktok-api-scraper-tracer-bullet.md  ISSUE-039-tikapi-io-scraper.md  ISSUE-041-add-trending-hashtag-to-tiktok-scrapers.md  ISSUE-041-review--test-instagram-global-trending-tool--ca.md  ISSUE-041-review-acceptance-criteria-requires--tests-test.md  ISSUE-041-review-missing---require-env-ig-cookies-file--.md  (+15 more)
(+73 files in other folders)
