[project]
name = "trendcrwaling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml-html-clean>=0.4.4",
    "mcp[cli]>=1.27.0",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.1",
    "tiktokapipy>=0.2.4.post2",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
