[project]
name = "trendcrwaling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml-html-clean>=0.4.4",
    "mcp[cli]>=1.27.0",
    "openai>=1.0.0",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.1",
    "tiktokapi>=7.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
